--- a/_posts/2022-12-28-INITIUM-台湾国民法官新制-走进模拟法庭-感受司法审判的重量.html
+++ b/_posts/2022-12-28-INITIUM-台湾国民法官新制-走进模拟法庭-感受司法审判的重量.html
@@ -8,8 +8,8 @@ tags: blog
 author: 王怡蓁
 ---
 
-<p>「论罪量刑的艰难，困扰著模拟法庭上的国民法官，这样的压力，更可能会在制度上路上，成为无法忽视的现象。」</p><p>端传媒记者 王怡蓁 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-taiwan-citizen-judge/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/ad925e87728f469db747db6b15e66a1c.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年3月24日，台北地方法院，一场国民法官的模拟法庭。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年3月24日，台北地方法院，一场国民法官的模拟法庭。<span class="credit">摄：陈焯煇/端传媒</span></figcaption></figure><p>从法庭后方的旁听席起身，我走上法官通道，朝法台的方向前进。坐上法台，过去仅能从身后看著被告的背影，如今看清了被告的面容。不仅是视线的转换，也是身份的转变，我不再是法庭的纪录者，而定人生死的判官。<br><br>为让不同生命与社会经验的国民参与审判，并使法庭活动更加透明，台湾将于2023年元旦起，正式施行《国民法官法》。依据规定，<a href="https://theinitium.com/article/20221226-taiwan-citizen-judge-challenges/">国民法官</a>制度初始适用范围为“故意犯罪因而发生死亡结果之案件”，自2026年起，进一步将所犯本刑最轻十年以上的有期徒刑，纳入审判。只要国民年满23岁，并在地方法院管辖区连续住满四个月以上，就有资格获选为国民法官。</p>
+<p>「论罪量刑的艰难，困扰著模拟法庭上的国民法官，这样的压力，更可能会在制度上路后，成为无法忽视的现象。」</p><p>端传媒记者 王怡蓁 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-taiwan-citizen-judge/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/ad925e87728f469db747db6b15e66a1c.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年3月24日，台北地方法院，一场国民法官的模拟法庭。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2022年3月24日，台北地方法院，一场国民法官的模拟法庭。<span class="credit">摄：陈焯煇/端传媒</span></figcaption></figure><p>从法庭后方的旁听席起身，我走上法官通道，朝法台的方向前进。坐上法台，过去仅能从身后看著被告的背影，如今看清了被告的面容。不仅是视线的转换，也是身份的转变，我不再是法庭的纪录者，而是定人生死的判官。<br><br>为让不同生命与社会经验的国民参与审判，并使法庭活动更加透明，台湾将于2023年元旦起，正式施行《国民法官法》。依据规定，<a href="https://theinitium.com/article/20221226-taiwan-citizen-judge-challenges/">国民法官</a>制度初始适用范围为“故意犯罪因而发生死亡结果之案件”，自2026年起，进一步将所犯本刑最轻十年以上的有期徒刑，纳入审判。只要国民年满23岁，并在地方法院管辖区连续住满四个月以上，就有资格获选为国民法官。</p>
 <figure class="widget-wiki"><h3>谁可以当国民法官？</h3><figcaption>年满23岁、具有中华民国国籍、在地方法院管辖区域连续居住满4个月以上，符合以上三种基本资格，就有机会担任国民法官。但以下六条件者不得担任：自身因素（如褫夺公权）、身心因素（受辅助宣告）、未完成国民教育者、与案件有关、不能公平审判，及具法政军警执业的人。</figcaption></figure>
 
 <p>在国民法官正式上路前两年，台湾各地法院紧锣密鼓展开模拟法庭，将过去定谳的刑事案件加以改编，并邀请国民上场实际操演，希望从中发现问题，进而改善审判流程。<br><br>这年，我在3月及12月，分别参与两场位于台北地方法院及士林地方法院的模拟审判。过去，我多次以纪录者身份旁听审判，而这次，我将以国民法官的身份，权衡眼前证据的砝码，及被害者的正义，眼前的天平该如何平衡？</p>
@@ -24,139 +24,4 @@ author: 王怡蓁
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-taiwan-citizen-judge/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/184eb83c6b834a35a822653a6bf7e197.png?imageView2/1/w/1080/h/1080/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
 
-<p>在3月的模拟审判首日，摆放眼前是一本审前说明，第一页标示“法律的生命，始终不是逻辑，而是经验（The life of the law has not been logic; it has been experience）”，这段来自美国法学家、最高法院大法官霍姆斯（Oliver Wendell Holmes, Jr., 1841~1935）的名言，揭示国民法官殊异的多元经验，将为审判带来截然不同的火花。<br><br>这天一早，法庭内气氛略显热络，我与其他九位国民法官被带往一间称为“评议室”的房间，审判长欧阳仪透过电脑，从十人中随机选出六名国民法官、四名备位法官，她强调，选任后，我们不再使用自己的名字，会以编号作为彼此的称呼。<br><br>随后，三名职业法官披上黑蓝相间的法袍，领著十名国民法官离开评议室、进入法庭宣示。我们举起右手，对著国旗及国父遗像宣读誓词：</p>
-<p><em>（前略）⋯⋯当全程参与审判，依据法律独立行使职权，不受任何干涉，并且公平诚实执行职务，不为有害司法公正信誉之行为，绝对不会泄漏评议秘密及其他职务上知悉之秘密。</em></p>
-<p>宣读完毕，一行人再度回到评议室，审判长、受命法官、陪席法官向我们进行审前说明，以及在终局评议的投票规定，在最终强调投票“票票等值”后，这场模拟审判即将登场。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-taiwan-citizen-judge/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/f60ff15daff04c2694a18904058b442a.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年3月24日，台北地方法院，一场国民法官的模拟法庭。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2022年3月24日，台北地方法院，一场国民法官的模拟法庭。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption></figure>
-
-<h2>案件一，吸毒过量致死案</h2>
-<blockquote>
-<p>排除所有所有不可能，只剩一个事实，那就是真相。</p>
-</blockquote>
-<p>这是一起吸毒过量致死案件。</p>
-<p>34岁的酒店行政蔡富天，与24岁的酒店小姐张小玲是同居情侣。2021年1月2日早晨，两人在租屋处服用含有PMA、MMA、MDMA等成分的摇头丸与咖啡包助兴，却在傍晚，张小玲出现牙关紧闭、发抖、抽搐等症状，蔡富天见状，立即取用毛巾、牙膏让她咬住，随之用牛奶、蚬精催吐，直到晚间7时，张小玲中毒休克死亡。后来蔡富天的前女友致电要他起床上班，电话中察觉蔡男有异便前往察看，惊见赤身躺卧浴室死亡的张小玲，吓得她赶紧报警。</p>
-<p>本案争点在于：蔡富天提供的毒品与张小玲的死亡有无因果关系？蔡富天的行为又构成哪些罪刑？</p>
-<p>“排除所有所有不可能，只剩一个事实，那就是真相，”检察官引述福尔摩斯的名言指出，蔡富天与张小玲的死有因果关系，如果蔡男没提供毒品，张小玲就不会死。检察官主张，蔡男毒史达17年，也有戒瘾经验，怎么可能完全没料到，娇小的女友连吃五颗摇头丸不会出事？</p>
-<p>检方接连说，张小玲单亲、低收入、父亲又欠下债务，只得到酒店工作，“张小玲以为蔡富天可以拉她一把，却是被推入深渊”，检方出示遗留在案发现场的布偶老虎，向法官动之以情，并要求依“转让禁药致死罪”判处蔡富天9年徒刑。</p>
-<p>在检察官凌厉的攻势下，五号国民法官问蔡男：“为什么案发时会跟前女友联系？”一号国民法官则问：“为什么与死者在死前争吵？”并质疑蔡男是否为了前女友杀人？</p>
-<p>接著，被告律师登场，从被告律师的辩论策略观察，律师团尝试扭转国民法官原先略以倒向检察官的立场。</p>
-<p>在检方后登场的，是被告辩护律师。律师对著法官介绍坐在一旁的蔡富天，说道：“这个活生生的人就在各位眼前，他白天休息，晚上在酒店工作，他的身世与张小玲一样悲惨。”律师说，蔡富天母亲早逝、父亲锒铛入狱，祖母年岁已高需要他照顾，蔡男也为了摆脱毒瘾自费戒毒；律师主张，蔡男也吃了同样药量，他发现女友情况不对时也立即催吐，“被告没有杀人意图。”</p>
-<p>律师转向国民法官，问道：“依现有证据，我们能证明死者吃了多少药吗？”律师更指出，张小玲身上被验出蔡男身上没有的毒品成分，“死者回家前有无再跟客户吸毒？”在一连串的诘问下，几位国民法官也随之将焦点转向毒品成分上。</p>
-<p>随后，法官传唤法医作为专家证人，法医指出，张小玲的死因为急性毒药物中毒，其体内PMA是过往平均中毒死亡药量的数倍。律师问，“如果及早送医是否能救回一命？鉴定报告出现被告体内没有的毒品反应，又是否致命？”法医回答，无法推断能否挽回生命，而死者光是单一毒品就到达致命用量，难以从解剖回答其他问题，需要请毒物专家厘清。</p>
-<p>国民法官问法医，“死者生前用药的情况，可否推估用药的时间、花多少时间代谢？”“如果她当天只吃一种毒品，没有其他毒品还会死亡吗？”法医指出，无法从解剖回推这些问题。</p>
-<p>下午，双方进行辩论，法官并请被告进行最后陈述。检方表示，被告违反黄金救援30分钟原则，未即时将死者送医急救，且他至今仍未与死者父亲达成和解，请求依转让禁药致死罪判蔡富天9年徒刑。</p>
-<p>“蔡富天的家庭有缺憾，没有父母的关爱，他以为吸毒会带给他快乐，想自费戒毒时，却没人继续拉他一把，直到他遇见同样痛恨父亲的张小玲，他们一起交往、用药，在底层互相取暖，却不幸导致女方死亡，”被告辩护律师主张，被告并非罪大恶极，应依过失致死罪从轻量刑。</p>
-<p>国民法官们按捺不住内心的困惑，接连对被告提出无数问题：“你的毒品哪来？”“知道嗑药会死吗？”“你说要负责，却又说跟张小玲的死无关？”“为什么与前女友联系？”蔡富天还原当天用药、争执与寻欢的情节，并称，张小玲心情不好就会吸毒，他并未阻止、并跟著一起用药，“我很自责，当天她身旁只有我。”</p>
-<p>随后，这天的模拟审判，便在检辩双方的论告中结束。最后蔡富天对著法官哭诉，他真的没想到张小玲会死，“我对不起小玲、小玲爸爸，还有我的阿嬷、姑姑，让他们担心，我愿意接受惩罚。”</p>
-<p>翌日，我们随同职业法官进入评议室，按照规定，正式审判之后，评议过程得全程保密不得公开，六名国民法官将会轮流发表意见，接著才是三名职业法官发言。最后，再由九人共同投票、做出论罪与量刑的决定。</p>
-<p>依据规定，论罪时，必须达到全体人数的三分之二，也就是超过六人以上才能达成决议，而量刑只要二分之一，但死刑要达到三分之二门槛；需注意的是，投票均需获至少一名职业法官的票数。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-taiwan-citizen-judge/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/71d471d3cd0543adb6ae6bf31a2cd30e.png?imageView2/1/w/1080/h/1620/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
-
-<p>评议会上，法官们针对被告是否成立转让禁药致死罪，以及被告行为是否与张小玲的死亡有关加以讨论。</p>
-<p>本业为医师的五号国民法官认为，被告为资深药瘾者，他必定清楚服用过量毒品会致死，他质疑，被告是否有杀人意图，想借此与前女友破镜重圆；最后，他投票给转让禁药致死罪，并主张被告与张女死亡有因果关系。</p>
-<p>另名本业为精神科医师的六号国民法官，他以自身过往与用药者互动的经验认为，用药者经常性地说谎、且会合理化自身行为。他主张，如果轻纵被告，出狱后他必定继续吸毒、害人。</p>
-<p>相较两名医师的评议，本业为教师的二号国民法官说，从证据来看，无法肯定死者是否在工作期间吸毒，尽管蔡男提供毒品吸食，但难以主张该举导致张小玲死亡。二号国民法官提及，被告也吃了五颗摇头丸，他未有求死意图，既然如此，他认为被告并不清楚对方会因为吃了五颗药丸而死亡。</p>
-<p>最后，纵使有国民法官主张本案应为过失致死、而非转让禁药致死，但仍以七票、过半的比例，成立转让禁药致死罪。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-taiwan-citizen-judge/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/e63859c51f6045d38d74ebfe6834340c.png?imageView2/1/w/1080/h/1080/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
-
-<p>在论罪成立后，法官们将就被告刑期加以讨论。</p>
-<p>首先，由于案发后，被告主动向警方自首，此符合减刑要件，因此刑度会从3年6月至14年11月计算，由于量刑统计将依序从“最重”的刑度并入“次重”刑度，直到过半门槛。最终本案宣判，被告蔡男需入监服刑6年10个月。</p>
-<p>实际上，若我们看回当年的判决结果，原审依转让禁药致死罪判处被告9年刑期，但加入国民法官审理后，刑期降低为6年10月。</p>
-<p>同时，本案另有两组国民法官参与审理，这两组国民法官平均年龄为中年，职业遍布上班族及家庭主妇，这两组国民法官一致认为，蔡男提供的摇头丸与张女的死亡无因果关系，被告无法预知张女服用后会死亡，因此各依转让禁药罪及过失致死罪判刑，判处4年4月与4年。</p>
-<p>一名担任备位国民法官的年轻住院医师与我分享，他过去只在高中公民课学过法律，也没上过法院，多从法庭剧认识法庭活动。他说，“参与审判的经验像是站在悬崖边缘”，让作为医者的他感同身受。他也观察到，庭上两名具医师背景的国民法官，对于案件带有强烈的见解，他认为，他们以自身专业及经验，做出凌驾于现有证据的判断。他担心，这会在审理过程造成“权威效应”。</p>
-<p>本庭的受命法官吴玟儒表示，由于本案为药事法案件，又有两位医师有药事法相关经验，她认为这样透过自身经验形成的权威效应，在正式上路也可能发生；审理过程中，就算不是医师，素人也可能因其生命经验产生权威效应，职业法官必须于审理过程留意、并加以提醒。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-taiwan-citizen-judge/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/8d685a7aeead46bdbde1a59d337ff2f6.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="台湾司法院。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">台湾司法院。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption></figure>
-
-<h2>案件二，女婴“喂毒”致死案</h2>
-<blockquote>
-<p>我一方面怀疑自己量刑会不会对不起被害人，但又担心被告的另名幼子没人照顾，非常煎熬。</p>
-</blockquote>
-<p>在国民法官制度正式上路前一个月，台湾士林地方法院举办全台最后一场模拟法庭，本案为2016年间，50岁的男子陈可立与张姓妻子，半夜为两个月大的女婴陈小凡喂奶后，发现女婴失去生命迹象，经紧急送医仍回天乏术。经法医检验，女婴体内验出高浓度的氟硝西泮（Flunitrazepam），又称FM2。</p>
-<p>经警方调查，父亲陈可立坦言因为女儿哭闹不休，为让她安静睡觉，因而把自己平常吃的安眠药氟硝西泮磨碎，四度掺入奶粉中让女儿喝下。</p>
-<p>而本案争点在于：陈可立是否知道氟硝西泮为三级毒品，服用过量可能中毒、死亡？陈可立是否为故意杀人？所犯罪名，为“成年人故意对儿童犯杀人死罪”、“成年人故意对儿童犯伤害致人于死罪”，又或是“过失致人于死罪”？</p>
-<p>辩护律师主张，陈男与妻子二人与女婴一同挤在一张单人床睡觉，陈男疼爱女儿之心不言而喻。而陈男工作为临时工，即便手头拮据，但依然四处借钱，好让高龄的妻子能够剖腹安全生产。依据陈男的精神鉴定报告指出，陈男患有轻微智能障碍及精神疾病；律师也强调，他还有年迈失智的老母亲，以及一名幼子需扶养。</p>
-<p>检察官紧接表示，陈男明知成人只能一次吃两颗氟硝西泮，但却让只有2.7公斤的女婴接连吃下2.25颗的安眠药，等于是80公斤的陈男吃下65颗的安眠药。检方更拿出陈男的保险证明，主张被告因精神障碍共请领60万保险金，证明他智力正常，没有行为能力减损的情形。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-taiwan-citizen-judge/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/2208163878ae49a3b9348a7f3647a311.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年3月24日，台北地方法院，一场国民法官的模拟法庭。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2022年3月24日，台北地方法院，一场国民法官的模拟法庭。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption></figure>
-
-<p>这场模拟审判，国民法官的性别比为一比一，职业多为上班族，年龄落于中年年纪区间。</p>
-<p>在这场评议中，由于涉及大量法律用语（如杀人的不确定故意）、及繁杂的法条内容，最后与预期宣判时间足足晚了五个小时。最终，法官宣判，被告涉犯过失致死罪， 以五票过半判处一年徒刑，并宣告缓刑五年；原告须以保护管束方式强制进行精神治疗。而本案原审则依成年人故意对儿童犯伤害致人于死罪，处4年10月；国民法官审判结果明显“轻判”。</p>
-<p>宣判后，一名40多岁的四号国民法官告诉我，平常从事投资工作的他，不曾进到法院，甚至一开始收到法院通知书，还以为自己犯了什么错。他说，作为一名父亲，他可以理解被告的辛苦，“我一方面怀疑自己量刑会不会对不起被害人，但又担心被告的另名幼子没人照顾，非常煎熬。”</p>
-<p>一名年长的五号国民法官则说，他一开始不清楚国民法官是什么，直到收到通知、他上网查询才知道。在这场模拟审判中，他认为评议时间虽然很长，但审判长对案件详尽地介绍，也很公正；但他也希望，量刑可以交由职业法官执行，对国民来说，审理时间短促、又不具法律专业，做出的量刑对双方都不公平。</p>
-<p>也有一名国民法官担忧，除了法条的艰涩难解外，作为人母的她，也希望国家能够提供托育服务，才能让国民法官安心参与审判。</p>
-<p>即便这场模拟法庭是我参与过耗时最长的案件，本场次的专家评论员则指出，这场模拟审判十分接近正式上路后的场景，也就是在评议阶段逐条、逐项仔细讨论。他指出，日本裁判员制度，平均评议时间为900分钟（16小时），虽然所需时间较长，但必须让国民法官畅所欲言。</p>
-<p>从数据来看，这一系列的国民法官模拟审判，统计评议时间平均约为四小时，而日本裁判员制度的评议时间，2021年统计为一案为836（13.9小时）分钟，审理则为693分钟（11.6小时）。</p>
-<p>日本京都大学教授松本芳希<a href="https://www.judicial.gov.tw/tw/cp-1431-66973-ba3fe-1.html">表示</a>，日本裁判员制度施行后，截至2017年10月底为止，裁判员审判案件平均时长为7.6天，平均开庭次数为4.4次。实际审判要兼顾充分调查证据与评议讨论，也要减轻国民负担，将成未来最大挑战。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-taiwan-citizen-judge/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/c8be42b3e5904eda843ceec2046ca559.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年7月27日，台北，国民法官法庭揭牌启用典礼。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2022年7月27日，台北，国民法官法庭揭牌启用典礼。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption></figure>
-
-<h2>社会重判呼声高，模拟案件却轻判？</h2>
-<blockquote>
-<p>实际参与审判后，国民法官从中获知许多从媒体上无法得知的资讯，并影响量刑决定；决定他人的生命需要谨慎为之，多数国民法官并不倾向剥夺他人生命。</p>
-</blockquote>
-<p>多年来，台湾社会一旦发生媒体高度关注的重大案件，要求法院“重判”的声浪不绝于耳，甚至“唯一死刑”的意见，也常见于公众舆论中。</p>
-<p>然而，不只记者参与的两场模拟审判，判决结果都比原审轻判，反而不见原先社会所期待的“重判”结果，司法院刑事厅法官文家倩亲身参与多场模拟法庭，她认为，会有这样的落差，在于民众有无“亲身参与”的经验。</p>
-<p>文家倩说，民众大多从媒体接收到片面的案件资讯，如弑母案，多数民众人神共愤、高呼判死，但实际参与审判后，从中获知许多从媒体上无法得知的资讯，并影响量刑决定。她也说，曾有国民法官无法判被告死刑的原因，在于不想“断人香火”，多数国民法官认为，决定他人的生命需要谨慎为之，并不倾向剥夺他人生命。</p>
-<p>不过，刑事厅法官陈思帆则有不同见解。</p>
-<p>陈思帆提醒，模拟案件与原审绝对不同，因案件已经改编，无法完全比拟，而模拟案件刑度较原审低，是因为并非所有证据都全数呈现在国民法官面前；此外，审案时间较少，未能经过充分讨论，也是原因之一。</p>
-<p>陈思帆提及，曾有一起案件，有四名国民法官一开始就表达“判死”的立场，但原审并未判死，检方也未求处死刑。会有这样的现象，他观察，审判长一开始就询问国民法官“要不要判死”，却未详细说明判处死刑前，需检视两公约、及其他减刑要点。</p>
-<p>而这起案件后来经过职业法官说明“判死”的限制后，便从一开始的“判死”改判有期徒刑，陈思帆说，在国民法官不知道有其他刑度的选择下，判死自然成唯一选项。</p>
-<p>因此，在评议过程中，法官如何引导讨论需审慎进行，但他也强调，量刑工具是为让国民法官在“公平性”与“妥适性”中取得平衡，但如果国民法官过度追求一致性，虽达到法律的稳定性，但却失去了国民法官制度想达成的多元意见。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-taiwan-citizen-judge/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/b859b960bef84d339f06bcbe71f426ee.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年7月27日，台北，国民法官法庭。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2022年7月27日，台北，国民法官法庭。<span class="credit">摄：苏威铭/端传媒</span></figcaption></figure>
-
-<h2>从国民法官生命经验看见多元意见</h2>
-<blockquote>
-<p>“你当时身上有多少钱？”“300元。”你有吃东西吗？”“有，去小吃店吃了一盘沙鱼烟，再喝一瓶大瓶的高粱酒。”“不可能！一盘沙鱼烟至少要100元，你剩200元买不起大瓶高粱酒！”</p>
-</blockquote>
-<p>陈思帆指出，在法律上，认为“犯罪事实”需要建构在“构成要件”上，如杀人罪的事实，就是一个人的行为导致另一个人的死亡，不仅主观上要认定行为与行为的结果，客观上则要行为与行为的结果都实现，职业法官必须紧扣著人事时地物等要点。然而，国民法官则更在意行为的细节与动机，这便是法律人的训练与一般国民的差别。</p>
-<p>此外，量刑上也须考量手段、动机、行为造成结果的严重性，并将犯后态度、是否赔偿被害人等因素纳入综合考量。陈思帆指出，过去一起杀人案件的模拟审判，法官提醒被告已向被害人道歉并和解，可考虑从轻量刑、或缓刑宣告，但国民法官显然并不认同，质疑“为什么杀人可以赔钱了事？”</p>
-<p>像这类的想法落差，的确在案件审理中冲撞了职业法官的既有思维，但陈思帆认为，案件审理既希望可以维持一制性，但在个案中又希望呈现出独特性，这也是加入国民法官后的发现——使职业法官进而留意到过去未曾注意到的细节。</p>
-<p>文家倩的模拟审判经验，也说明了国民法官的生命经验，如何让判决更细腻。</p>
-<p>她所承审的一起“弑母案”，是一名60多岁的儿子杀害80多岁的母亲，为“老老照护”的杀害案。审理过程，国民法官问被告：“你多久送母亲就诊”、“住家离医院多远”、“家里有房贷吗？谁付钱？”这些细节看似与杀人案无关，但从中也描绘出儿子在照护、及精神上的压力与负担，进而厘清动机本身。最后，这起案件判处8年刑期，并未如社会期待判死；国民法官所留意到的日常互动，不仅丰富了案件细节，也使判决更为细腻。</p>
-<p>另个杀人案的模拟审判，也呈现国民法官丰富的生命经验如何发现真实。</p>
-<p>在这起杀人案中，被告抗辩他喝下一大瓶高粱酒、导致自身失去行为能力，因此，本案的争点在于：被告有无因酒醉而丧失行为能力，此将影响到如何决定量刑。</p>
-<p>国民法官问：“你当时身上有多少钱？”被告：“300元。”国民法官再问：“你有吃东西吗？”被告答：“有，去小吃店吃了一盘沙鱼烟，再喝一瓶大瓶的高粱酒。”国民法官听闻后立即反驳：“不可能！一盘沙鱼烟至少要100元，你剩200元买不起大瓶高粱酒！”</p>
-<p>文家倩说，国民法官多元殊异的生活经验，可以触及职业法官较少涉猎的领域。她也提醒，国民法官的想法多元，但在审理上，必须符合法律要求的平衡、公平与妥适性，这些都需要职业法官在审理过程不断提醒。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-taiwan-citizen-judge/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/f7600ca3ca6c402b91eb57d7e7738cf7.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="律师林俊宏。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">律师林俊宏。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption></figure>
-
-<h2>国民法官的天平考验</h2>
-<blockquote>
-<p>只要你依法判决，你就对得起良心。</p>
-</blockquote>
-<p>论罪量刑的艰难，困扰著模拟法庭上的国民法官，这样的压力，更可能会在制度上路上，成为无法忽视的现象。</p>
-<p>文家倩说，有一位本业是医师的国民法官，审理过程因为压力过大而想请辞。“一个人的判断将对另一个人产生巨大影响，”文家倩说，未来因为压力过大而请辞国民法官的状况，应该不在少数——职业法官都必须经历无数次的训练才能适应，但人民一辈子可能就只参与过一次国民法官。</p>
-<p>而当证据无法证实被告犯罪，或是当精神鉴定报告直指被告行为时无行为能力，国民法官必须做成无罪判决——尽管它违背了自身的法律情感。文家倩建议，只要你依法判决，你就对得起良心。但也凸显出，“人生有多难，量刑就有多难”的不变道理。</p>
-<p>此外，多所被指出的担忧是审理过程中的“权威效应”，是否影响判决的公平性。权威效应指的是，一个人如果地位崇高、受到社会景仰，那么他所说的话就具有份量，并容易使人相信其正确性。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-taiwan-citizen-judge/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/88b309025b304e5bbaddaa5f58c07e16.png?imageView2/1/w/1080/h/1350/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
-
-<p>不过，对律师林俊宏而言，他不认为我们需要对此过度担心。</p>
-<p>林俊宏认为，审判过程必然发生权威效应，无论专业人士的发言是否影响他人判断，三名国民法官的存在，已是无法忽视的存在，“法官发言的份量，必定比国民法官高；何况法官也会有主观的想法与情感，进而影响判决结果。”</p>
-<p>林俊宏建议，由于评议过程必须全程保密，但也可能让评议过程的错误、及刻板印象难以被发现。他说，未来也许可参照美国陪审团制度的规定，国民法官评议后可接受媒体采访。他指出，曾有一起案件，便是一名陪审员对墨西哥裔的被告发表歧视性的言论，最后该起判决遭最高法院撤销。</p>
-<p>文家倩认为，审判长在评议过程中，必须指挥协助成员的多元讨论，像是审判长要注意到哪些国民法官发言次数少，适时引导他发言，也要兼顾少数意见，给予充分发言讨论的机会。她提醒，一旦团体出现强势发言者的时候，审判长也可让强势方稍后发言，先聆听少数意见者的看法。</p>
-<p>依据规定，评议过程由国民法官先发表意见，最后才由职业法官发言。 此外，在国民法官选任阶段，如发现有怀抱强烈敌意、及极端意见的国民法官，致无法沟通状态，可于选任程序予以排除。而若进到审理程序才发现，亦可解任，以维持审判公正性。</p>
-<p>相较权威效应的影响，林俊宏担忧的是，由于国民法官案件酬金少、负荷大，将大幅降低辩护人透过法扶来接案的意愿。</p>
-<p>司法院规定，法扶律师接任国民法官案件一审为75,000元，且为分阶段给付，比起一般法扶案件一案三万元看起来相对高出不少，但由于国民法官案件都是重罪，要到看守所律见当事人、声请证据调查，行政作业与事前准备工作加上密集开庭，几乎不可能承接其他案件，对律师来说缺乏诱因，对小型事务所来说，也更为吃紧；即便接案了，接案律师也可能未必愿意百分之百全心投入。</p>
-<p>林俊宏建议，面对国民法官案件中的弱势当事人，应提高扶助律师接案诱因，另增加法扶专职律师员额，解决酬金过低问题，或仿效美国成立公设辩护人办公室，都是可考量的作法。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-taiwan-citizen-judge/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/ad10e2f2ffb645c185893c7bde06979d.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年3月24日，台北地方法院，一场国民法官的模拟法庭。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2022年3月24日，台北地方法院，一场国民法官的模拟法庭。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption></figure>
-
-<h2>冰上的人与落水的人</h2>
-<blockquote>
-<p>我们的一生同样都在薄冰上跳舞，冰层下极冷，若不幸落水，很快就会丧生。有时冰层无法承载某些人的重量，于是冰破人落海，我感兴趣的就是这一刻。如果幸运的话，事过境迁，我们依然继续跳舞。如果幸运的话。</p>
-</blockquote>
-<p>审判终有宣判的时刻，模拟审判亦同。</p>
-<p>评议结束，判决宣判落幕，但对国民法官制度的担忧，将持续啮咬著国民。</p>
-<p>国民法官小廖惴惴不安地告诉我，“专业人士的权威效应、我们的主观情感，会不会影响最后判决⋯⋯外界真的不知道评议室发生什么事，会不会到头来变成另外九只恐龙（法官）而已？”</p>
-<p>另一名本业为教师的国民法官坦言，自己过去常认为法官是恐龙，“参与了模拟审判，才发现原来自己才是恐龙。”坚持无罪推定及罪疑为轻的他，判决结果显然不符合社会重判的期待，“我困惑了，到底谁才是恐龙⋯⋯？”</p>
-<p>德国知名辩护律师的费迪南・冯・席拉赫（Ferdinand von Schirach），在《罪行》一书中提及，“很少有人在早上起床的时候说：‘好，我今天要犯罪！’但是，每个人都可能犯下罪行。”</p>
-<p>我想起那段知名的描述，他说：“我们的一生同样都在薄冰上跳舞，冰层下极冷，若不幸落水，很快就会丧生。有时冰层无法承载某些人的重量，于是冰破人落海，我感兴趣的就是这一刻。如果幸运的话，事过境迁，我们依然继续跳舞。如果幸运的话。”</p>
-<p>我们都是在冰上跳舞的人，我们也都在同一块冰上跳舞。只是，有时因为一些理由，负荷著我们的冰块并未破裂让我们掉落，但有些人却因此坠落。</p>
-<p>杀人犯、毒贩的故事，是他们的故事，但其实与我们没有多大的差别。当人们审理著一起起的案件，我们该漠然地看著他们求救，或是细细探究落水的位置、及冰破的理由，在冰上的我们，如何审视破冰落水的这群人——</p>
-<p>这些将由国民法官来回答。</p><figure class="image"><a class="image" href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchpic" target="_blank"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2021/06/initium_plus_app.png?imageView2/1/w/2538/h/2039/format/jpg" referrerpolicy="no-referrer"></a></figure><p><small class="u-font-sans">我们推出<a href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchbottom%20target=" _blank">端 Plus 会员计划</a>，邀请你们成为独立新闻的守护者，帮助我们守护端，也帮助我们继续守护各地独立记者，支持他们产出更多优质的华文调查报导。</small></p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
+<p>在3月的模拟审判首日，摆放眼前是一本审前说明，第一页即标示“法律的生命，始终不是逻辑，而是经验（The life of the law has not been logic; it has been experience）”，这是句来自美国法学家、最高法院大法官霍姆斯（Oliver Wendell Holmes, Jr., 1841~1935）的名言。（注1）<br><br>这天一早，法庭内气氛略显热络，我与其他九位国民法官被带往一间称为“评议室”的房间，审判长欧阳仪透过电脑，从十人中随机选出六名国民法官、四名备位法官，她强调，选任后，我们不再使用自己的名字，会以编号作为彼此的称呼。<br><br>随后，三名职业法官披上黑蓝相间的法袍，领著十名国民法官离开评议室、进入法庭宣示。我们举起右手，对著国旗及国父遗像宣读誓词：</p>
