--- a/_posts/2022-12-28-PQ-義大利智庫-台灣人從烏克蘭戰爭學到很多-歐洲人必須趕上.html
+++ b/_posts/2022-12-28-PQ-義大利智庫-台灣人從烏克蘭戰爭學到很多-歐洲人必須趕上.html
@@ -8,7 +8,11 @@ tags: blog
 author: 王雪俐
 ---
 
-<p class="pqnote">烏克蘭戰爭爆發後，歐洲媒體比以往更加留意台海情況，因為若中國進犯台灣將直接影響到美國能投入歐洲戰場的資源，此外歐洲倚賴台灣的晶片也是主要原因。關於週一中國軍機擾台，歐洲媒體如《德國之聲》都在報導中強調，這是中國軍機騷擾台灣規模之最，也說明海峽中線在過去具有「非正式緩衝區」的作用。隔日蔡英文總統親自召開記者會，宣布將兵役由四個月延長至一年，這則消息獲得國際媒體的注意，恰好和前一日中國 71 架次軍機擾台，47 架次越過海峽中線的新聞連成一氣，等於為台灣延長兵役的政策背書。</p>
+<p class="pqnote">烏克蘭戰爭爆發後，歐洲媒體比以往更加留意台海情況，因為若中國進犯台灣將直接影響到美國能投入歐洲戰場的資源，此外歐洲倚賴台灣的晶片也是主要原因。關於週一中國軍機擾台，歐洲媒體如《德國之聲》都在報導中強調，這是中國軍機騷擾台灣規模之最，也說明海峽中線在過去具有「非正式緩衝區」的作用。</p>
+
+
+
+<p>關於12/25（日）─ 12/26（一）中國軍機擾台，歐洲媒體如《德國之聲》都在報導中強調，這是<strong>中國軍機騷擾台灣規模之最</strong>，也說明海峽中線在過去具有「非正式緩衝區」的作用。隔日12/27（二）<strong>蔡英文</strong>總統親自召開記者會，宣布將<strong>兵役由四個月恢復為一年</strong>，這則消息獲得國際媒體的注意，恰好和前一日中國 7<strong>1 架次軍機擾台，47 架次越過海峽中線</strong>的新聞連成一氣，等於<strong>為台灣一年兵役的政策背書</strong>。<br></p>
 
 
 
@@ -16,7 +20,7 @@ author: 王雪俐
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/e0a4ce04-未命名設計-2-1024x473.png" alt="" class="wp-image-120402" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/e0a4ce04-未命名設計-2-1024x473.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/e0a4ce04-未命名設計-2-300x138.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/e0a4ce04-未命名設計-2-768x354.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/e0a4ce04-未命名設計-2-1536x709.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/e0a4ce04-未命名設計-2.png 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>烏克蘭軍方在利維夫市（Lviv）為罹難的台灣志願軍曾聖光舉行追思儀式　（圖／Ukraine+Taiwan Forum）</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/e0a4ce04-未命名設計-2-1024x473.png" alt="" class="wp-image-120402" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/e0a4ce04-未命名設計-2-1024x473.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/e0a4ce04-未命名設計-2-300x138.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/e0a4ce04-未命名設計-2-768x354.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/e0a4ce04-未命名設計-2-1536x709.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/e0a4ce04-未命名設計-2.png 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>烏克蘭軍方在利維夫市（Lviv）為罹難的台灣志願軍曾聖光舉行追思儀式　（圖／Ukraine+Taiwan Forum）</figcaption></figure>
 
 
 
