--- a/_posts/2022-12-29-INITIUM-2022-睡魔-末世启示-混沌-离乱-创伤中-当我们开始说故事.html
+++ b/_posts/2022-12-29-INITIUM-2022-睡魔-末世启示-混沌-离乱-创伤中-当我们开始说故事.html
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: 2022《睡魔》末世启示：混沌、离乱、创伤中，当我们开始说故事⋯⋯
+title: 2022《睡魔》末世启示：混沌、离乱、创伤中，当我们开始说故事
 date: 2022-12-29 03:09:00.000000000 +00:00
 link: https://theinitium.com/article/20221229-culture-sandman-stories-in-our-age/
 categories: initium
 tags: blog
-author: 特约撰稿人 周澄 发自香港
+author: 周澄
 ---
 
 <p>「当时代之恶汹汹而降，我们真的需要去在萤幕上观看另一场浩劫吗？」</p><p>特约撰稿人 周澄 发自香港</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-culture-sandman-stories-in-our-age/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/b6a5be85c49b40ed8ebe090e9d70705f.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="《如果我们的世界消失了》（Station Eleven）中，Kirsten 一直珍视、保存二十年的《Station Eleven》漫画复本。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
@@ -23,8 +23,7 @@ author: 特约撰稿人 周澄 发自香港
 <p>说故事是人类的集体生存本能，也是最古老悠长的艺术。若说《如果我们的世界消失了》肯定了说故事的价值，《睡魔》思考的就是说故事的代价。两部同年问世的剧集虽然类型不一，却都藉主角的迷失与寻索，怀想乱离中的传续与希望。</p>
 </blockquote>
 <h2>在后疫情废墟上做艺术</h2>
-<p>2015 年，我在英国准备期终论文的夏天读了当时刚面世的、加拿大女作家艾蜜莉‧孟德尔（Emily St. John Mandel）的小说《Station Eleven》。这末世异托邦故事以演员之死开场，写影星 Arthur Leander 在演出莎士比亚悲剧《李尔王》时猝死舞台；同晚，台下现
-实世界亦随之崩坍，传染速度与致命率极高的新型流感蔓延全球，仅剩 1% 人口幸免。<br><br>二十年后，当晚同台演出的女孩 Kirsten 随一个流浪剧团巡回北美各地，在现代文明的废墟上表演莎剧与古典音乐，既娱乐大众，也传承旧世界的文化遗产。但作者的世界观没有怎么曲高和寡，剧团马车上的格言“Survival is insufficient”就来自美国科幻经典《Star Trek》。<br><br>小说借由非线性的叙事逐渐交代 Arthur 第一任前妻 Miranda ——也是 Kirsten 珍视的同名漫画复本的无名作者——如何在大洋彼端孤身死于疫情，及其第二任妻子 Elizabeth 与独子 Tyler 幸存之后的下落；读者随 Kirsten 路上的历险，意外卷入一个拐掠儿童的邪教谜团；漫画故事既有点题之义，也成为她后来获悉真相的情节线索。<br><br>小说穿插 Arthur 故友 Clark 在偏远机场重建小社区、当晚为 Arthur 急救的 Jeevan 辗转成为乡村大夫，交织命运的牵系与离散。小说立意想像艺术与文化记忆在末世中的无用之用，铭刻文艺创作超越时间之限、流传后世的力量，荣膺英国最负盛名的科幻小说奖项克拉克奖（Arthur C. Clarke Award），改编事在必然。</p>
+<p>2015 年，我在英国准备期终论文的夏天读了当时刚面世的、加拿大女作家艾蜜莉‧孟德尔（Emily St. John Mandel）的小说《Station Eleven》。这末世异托邦故事以演员之死开场，写影星 Arthur Leander 在演出莎士比亚悲剧《李尔王》时猝死舞台；同晚，台下现实世界亦随之崩坍，传染速度与致命率极高的新型流感蔓延全球，仅剩 1% 人口幸免。<br><br>二十年后，当晚同台演出的女孩 Kirsten 随一个流浪剧团巡回北美各地，在现代文明的废墟上表演莎剧与古典音乐，既娱乐大众，也传承旧世界的文化遗产。但作者的世界观没有怎么曲高和寡，剧团马车上的格言“Survival is insufficient”就来自美国科幻经典《Star Trek》。<br><br>小说借由非线性的叙事逐渐交代 Arthur 第一任前妻 Miranda ——也是 Kirsten 珍视的同名漫画复本的无名作者——如何在大洋彼端孤身死于疫情，及其第二任妻子 Elizabeth 与独子 Tyler 幸存之后的下落；读者随 Kirsten 路上的历险，意外卷入一个拐掠儿童的邪教谜团；漫画故事既有点题之义，也成为她后来获悉真相的情节线索。<br><br>小说穿插 Arthur 故友 Clark 在偏远机场重建小社区、当晚为 Arthur 急救的 Jeevan 辗转成为乡村大夫，交织命运的牵系与离散。小说立意想像艺术与文化记忆在末世中的无用之用，铭刻文艺创作超越时间之限、流传后世的力量，荣膺英国最负盛名的科幻小说奖项克拉克奖（Arthur C. Clarke Award），改编事在必然。</p>
  
 
  
