--- a/_posts/2022-12-29-PQ-台灣人在戰爭中的悲運-下-台灣受刑人被國民黨送往戰場.html
+++ b/_posts/2022-12-29-PQ-台灣人在戰爭中的悲運-下-台灣受刑人被國民黨送往戰場.html
@@ -20,7 +20,7 @@ author: 邱 國禎
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/598fbbd3-福建省反共救國軍系統表。-1024x788.jpg" alt="" class="wp-image-124150" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/598fbbd3-福建省反共救國軍系統表。-1024x788.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/598fbbd3-福建省反共救國軍系統表。-300x231.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/598fbbd3-福建省反共救國軍系統表。-768x591.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/598fbbd3-福建省反共救國軍系統表。-1536x1182.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/598fbbd3-福建省反共救國軍系統表。-2048x1576.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>福建省反共救國軍系統表。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/598fbbd3-福建省反共救國軍系統表。-1024x788.jpg" alt="" class="wp-image-124150" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/598fbbd3-福建省反共救國軍系統表。-1024x788.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/598fbbd3-福建省反共救國軍系統表。-300x231.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/598fbbd3-福建省反共救國軍系統表。-768x591.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/598fbbd3-福建省反共救國軍系統表。-1536x1182.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/598fbbd3-福建省反共救國軍系統表。-2048x1576.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>福建省反共救國軍系統表。</figcaption></figure></div>
 
 
 
