--- a/_posts/2022-12-29-INMEDIA-古洞一人磚廠堅持香港製造36年-靠品質不怕抄襲-面臨收地不感可惜.html
+++ b/_posts/2022-12-29-INMEDIA-古洞一人磚廠堅持香港製造36年-靠品質不怕抄襲-面臨收地不感可惜.html
@@ -18,7 +18,7 @@ author: 獨媒報導
 <p>束著小馬尾的歐次鴻每日回廠製作圓型的混凝土定位磚（俗稱石屎餅），供貨給地盤作固定在鋼筋籠之用。他先將英泥及水混合，再倒入模中，同時要不斷震動模具，將空氣逼出。一般來說，英泥越多，石屎強度越高；水越多，石屎強度則越低。歐次鴻指有些工廠會加多點水以減少成本，但水份蒸發後會令石屎的密度減低，承壓力亦下降，他寧願多加英泥：「我想晚晚好瞓，唔洗頭痛，英泥我鏟多三鏟落去。」</p>
 <p><strong>研製蝴蝶磚 遭內地廠抄襲</strong></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/19vNtQ5u84" title="無標題"><img src="https://live.staticflickr.com/65535/52514231396_616b11433b_b.jpg" width="1024" alt="無標題" /></a><br /><em>辦公室貼了昔日生產的玻璃纖維製品的照片，如保安亭、流動洗手間</em></p>
-<p>九十年代是中華輝煌之時，小小的工廠有十多人工作，曾供貨予赤鱲角機場、青馬大橋、過海隧道等工程，當時主要供應玻璃纖維製品，如保安亭、流動洗手間等，及俗稱蝴蝶磚的鋼筋承托磚。</p>
+<p>90年代是中華輝煌之時，小小的工廠有十多人工作，曾供貨予赤鱲角機場、青馬大橋、過海隧道等工程，當時主要供應玻璃纖維製品，如保安亭、流動洗手間等，及俗稱蝴蝶磚的鋼筋承托磚。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/905Vp1on95" title="無標題"><img src="https://live.staticflickr.com/65535/52514727000_d3fac2b22e_b.jpg" width="1024" alt="無標題" /></a><br /><em>俗稱蝴蝶磚的鋼筋承托磚</em></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/M1V5HYiyeX" title="俗稱蝴蝶磚的鋼筋承托磚的模具"><img src="https://live.staticflickr.com/65535/52513774112_b6b69f45e5_b.jpg" width="1024" alt="俗稱蝴蝶磚的鋼筋承托磚的模具" /></a><br /><em>蝴蝶磚的鋼筋承托磚的模具</em></p>
 <p>這款中華出產的蝴蝶磚是歐次鴻研製，在建築界十分有名，曾用於汲水門大橋、海底隧道等，用作承托及固定鋼筋位置，亦可阻隔鋼筋與結構物，減慢鋼筋氧化，否則鋼筋氧化後會膨脹，有機會逼爆石屎。他憶述在80年代到歐洲出差時，見過類似蝴蝶磚的四方體磚，當時香港不少承托磚承壓力不足，於是自己在家嘗試製造不同大小及承壓力的承托磚，起初只是四方體，及後將它改良成弧線形，以減少磚塊與結構物的接觸面，避免產生印痕。因為承托磚形似蝴蝶，歐次鴻便將他命名為蝴蝶磚，「五金鋪嚟揾我買磚，話『有冇嗰隻蝴蝶型嘅磚』，原來佢哋叫做蝴蝶磚，好，咁我就改個名做蝴蝶磚。」</p>
