--- a/_posts/2022-12-29-INITIUM-古典合唱剧场-星落有时-换个角度重温卖火柴女孩的故事.html
+++ b/_posts/2022-12-29-INITIUM-古典合唱剧场-星落有时-换个角度重温卖火柴女孩的故事.html
@@ -21,8 +21,8 @@ author: 黄玲恺
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-pickup-singfest-meine-lieder-mein-licht/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/978e5bb511314867a937659e56c64614.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="《星落有时》原定于2022年1月在剧场上演﹐惟受疫情影响，要在有限时间和资源下“变阵”，把作品改以录像形式呈现。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">《星落有时》原定于2022年1月在剧场上演﹐惟受疫情影响，要在有限时间和资源下“变阵”，把作品改以录像形式呈现。<span class="credit">图：声蜚合唱节</span></figcaption></figure>
 
-<h2>布拉姆斯的音乐如何与《受难曲》一同呈现？</h2>
-<p>这次演出中，台上的演出者包括2男2女的4位独唱，8男7女的15位合唱，2位钢琴演奏。其中，4位独唱会演绎布拉姆斯的歌曲，15位合唱主要演绎《卖火柴的小女孩受难曲》。对音乐总监林浩恩来说，布拉姆斯的音乐如何与《受难曲》融合，才是体现音乐技巧的部分。他需要重整两位作曲家的作品。</p>
+<h2>布拉姆斯的音乐如何与受难曲一同呈现？</h2>
+<p>这次演出中，台上的演出者包括2男2女的4位独唱，8男7女的15位合唱，2位钢琴演奏。其中，4位独唱会演绎布拉姆斯的歌曲，15位合唱主要演绎《卖火柴的小女孩受难曲》。对音乐总监林浩恩来说，布拉姆斯的音乐如何与大卫‧朗的受难曲作品融合，才是体现音乐技巧的部分。他需要重整两位作曲家的作品。</p>
 <p>而曾丽婷在创作中最大的感受是“限制”。这次演出的音乐骨干并非她最为熟悉的作品，要根据这个框架去选曲并作出编排，起初感到有难度。而作为作品的主创，所有人的部分和场面都需要兼顾。好在有《照无眠》的经验，使得她更娴熟地在主创和歌者的身份之间找到平衡。</p>
 <p>作为本剧的联合编舞，林咏茵和李家祺注重的是整个画面的铺排与张力。李家祺表示，他们在画面中编排了一些暗示，那些暗示希望带出一种能量，是一种“与表演者同在”或者“他们一直在使这件事推进”的感觉。“我希望观众不要永远看到凄惨，能看到事情是在前进的，看到故事带出的精神。我觉得这很重要。”林咏茵说。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-pickup-singfest-meine-lieder-mein-licht/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/b9307b6eb2f94723baaa9df3fe5fa2d1.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="(左起)联合编舞林咏茵和李家祺，注重的是整个画面的铺排与张力。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
@@ -30,7 +30,7 @@ author: 黄玲恺
 
 <p>林咏茵认为，编排中她最为触动的部分，是在一些章节中合唱者、独唱们一起共同进退。在动作编排上，除了动作一致，画面上也营造得层次上一同前进。“一些音乐上的张力使我可以推进画面，让我看到画面、听到歌，觉得：就是这样安排了！”李家祺理解故事时，则注重在“冷”“暖”这两个元素上。“专注在小女孩身上，可以感受到她饥寒交迫、火柴光暖的温度；而如果把视野扩大，在那个世界中，周围的人却很欢欣、温暖。”</p>
 <p>问及对这种跨界合作的感受，林咏茵不假思索地笑答：“很好听。”李家祺则补充，是很震撼的。与音乐家合作，李家祺在编舞上对声音的考虑多了不少。声音与动作的配合、分配，让他感觉到这是声与画的真正合作。</p>
-<p>作为专业舞者，林咏茵日常在舞蹈专业领域浸淫，“而这次接触的合作朋友对舞蹈没有很多认知，我们很容易将我们认为很容易的事情放在他们身上”。哪怕滚落地下、小孩起身，这些对舞者来说轻而易举就可以做得优美的动作，原来对非专业人士来说是需要学习的，令她察觉此前编排时忽略的部分。</p>
+<p>作为专业舞者，林咏茵日常在舞蹈专业领域浸淫，“而这次接触的合作朋友对舞蹈没有很多认知，我们很容易将我们认为很容易的事情放在他们身上”。哪怕滚落地下、小跳起身，这些对舞者来说轻而易举就可以做得优美的动作，原来对非专业人士来说是需要学习的，令她察觉此前编排时忽略的部分。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-pickup-singfest-meine-lieder-mein-licht/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/06c1087d4c7b4a2fa230c2cc982f9a43.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="演出中，布拉姆斯作品的部分主要由四位独唱演绎，包括(左起)陈皓琬、曾丽婷、钱深铭，以及李家澍。（剧照摄影︰霍建茵）" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">演出中，布拉姆斯作品的部分主要由四位独唱演绎，包括(左起)陈皓琬、曾丽婷、钱深铭，以及李家澍。（剧照摄影︰霍建茵）<span class="credit">图：声蜚合唱节</span></figcaption></figure>
 
@@ -38,15 +38,14 @@ author: 黄玲恺
 <p>经典的卖火柴小女孩的故事，被创作者赋予了《星落有时》这个新名字。曾丽婷解释，“星落”指的是流星，一颗流星跌落为之“星落”；而“有时”则指“生有时，死有时”，万物皆有命数。“星落有时”，指流星要跌落，自有其定数。《卖火柴的小女孩》故事中，有一个情节，是小女孩看见流星划落，想起嫲嫲说过，当你见到一颗流星滑落，就是有一个人上了天堂。除了中文标题，其实还有德文标题《Meine Lieder, mein Licht》，意思是“我的歌，我的光”。这也是演出其中一首歌的歌名。把中文和德文名字一同阅读，才看出创作者对这个作品的理解。林浩恩还透露，演出的最后一首歌，讲述的正是“最后我们面对这些艰难的事，其实就是以一首摇篮曲，面对生命中的挣扎”。</p>
 <p>主创们对于这个作品，都摆放了自己的理解和想要传达的意义。</p>
 <p>林咏茵与曾丽婷合作，从两年前讲述无家者故事的《照无眠》开始。林咏茵认为，这两次合作的共通之处，在于这两个故事都很人性。她觉得《卖火柴的小女孩》人性之处在于，听上去这个故事好像有很久的历史，但对照现在的世界、这个地方，很容易有很多场面在脑海中。“这个故事和《照无眠》，都是讲述很‘卑微’的弱势阶层，但他们在很有力量地生存著，很有生存意志。小女孩虽然死了，但她的这种精神被抽取出来，因为我们知道，很多人会有共鸣。”</p>
-<p>林浩恩则希望来看演出的人更多地接纳自己，接受自己的每一个感受，都没有对错，忠于自己。</p>
-<p>随着编排的进程，曾丽婷对于这个作品赋予了多层意义。最浅显那一层，当然是希望观众积极地面对看似毫无前景、我们无法改变的将来。但这种正面的思维，在编排时她也一直中重新整理。在整理之后，走入更深的一层，她认为其实是关于人性的选择：“到底我们的人性，是选择一条善良的路？一条坚持的路？还是选择负面？选择无力？无力感一定会有，我们是不是任它继续发酵，心态上是否逃避一些事？”</p>
+<p>林浩恩则希望看演出的人更多地接纳自己，接受自己的每一个感受，都没有对错，忠于自己。</p>
+<p>随着编排的进程，曾丽婷对于这个作品赋予了多层意义。最浅显那一层，当然是希望观众积极地面对看似毫无前景、我们无法改变的将来。但这种正面的思维，在编排时她也一直重新整理。在整理之后，走入更深的一层，她认为其实是关于人性的选择：“到底我们的人性，是选择一条善良的路？一条坚持的路？还是选择负面？选择无力？无力感一定会有，我们是不是任它继续发酵，心态上是否逃避一些事？”</p>
 <p>思考至今，她认为她和她身边的朋友选择保持“坚持”的心态：将身边一些认为对的事情，坚持下去。而这，也是这个作品中的其中一份精神。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221229-pickup-singfest-meine-lieder-mein-licht/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/9ee4087249334b349ef22c6f5b507c98.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="《星落有时》不只带出积极面对将来的正面思维，同时亦期望引发观众对人性的选择之反思。（剧照摄影︰霍建茵）" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">《星落有时》不只带出积极面对将来的正面思维，同时亦期望引发观众对人性的选择之反思。（剧照摄影︰霍建茵）<span class="credit">图：声蜚合唱节</span></figcaption></figure>
 
 <p>－－－－－－－－－－－－－－</p>
-<p>布拉姆斯黑盒剧场《星落有时》 （网上放映）
-Brahms in Black Box - Meine Lieder, mein Licht (Online Screening)</p>
+<p>布拉姆斯黑盒剧场《星落有时》 （网上放映）</p>
 <p>声蜚合唱节以录像形式呈献古典合唱剧场新作︰布拉姆斯黑盒剧场《星落有时》，结合独唱、合唱、钢琴音乐、形体及剧场元素，以当代角度重新演绎布拉姆斯多首德语艺术歌曲及大卫‧朗2008年普立兹音乐奖得奖作品《卖火柴的小女孩受难曲》。换个角度，重温卖火柴女孩的故事，一同擦出心里亮光！</p>
 <p>(德语及英语演出，附中文及英文字幕)</p>
 <p>主办机构: 声蜚合唱节</p>
