--- a/_posts/2022-12-29-PQ-今年第七度軍售-美售台機動布雷系統.html
+++ b/_posts/2022-12-29-PQ-今年第七度軍售-美售台機動布雷系統.html
@@ -24,12 +24,8 @@ author: 呂酒林
 
 
 
-<p>火山系統具有機動性高、散布面廣廣、作業人員少、作業速度快等性能，可有效縮短阻絕設置時間，達到機動快速布雷，阻滯敵軍的目的。一輛布雷卡車可在 4 到 12 分鐘內鋪設出一道約 1100&#215;120公尺的雷區。</p>
+<p>火山系統具有機動性高、散布面廣廣、作業人員少、作業速度快等性能，可有效縮短阻絕設置時間，達到機動快速布雷，阻滯敵軍的目的。一輛布雷卡車可在 4 到 12 分鐘內鋪設出一道約 1,100&#215;120公尺的雷區。</p>
 
 
 
-<p>參考資料：<a href="https://www.cna.com.tw/news/aipl/202212290059.aspx">國防部：美售台1.8億美元陸上機動布雷系統 進入知會國會程序</a></p>
-
-
-
-<p>參考資料：<a href="https://www.cna.com.tw/news/aipl/202212290216.aspx">美售台車載火山系統 快速縱深布雷阻滯敵軍</a></p><p>The post <a href="https://pourquoi.tw/taiwan-news-20221229-1/">今年第七度軍售　美售台機動布雷系統</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+<p>參考資料：<br><a href="https://www.cna.com.tw/news/aipl/202212290059.aspx" target="_blank" rel="noopener">國防部：美售台1.8億美元陸上機動布雷系統 進入知會國會程序</a><br><a href="https://www.cna.com.tw/news/aipl/202212290216.aspx" target="_blank" rel="noopener">美售台車載火山系統 快速縱深布雷阻滯敵軍</a></p><p>The post <a href="https://pourquoi.tw/taiwan-news-20221229-1/">今年第七度軍售　美售台機動布雷系統</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
