--- a/_posts/2022-12-30-PQ-擔憂疫情隨中國旅客長驅直入-多國加強邊境管制措施.html
+++ b/_posts/2022-12-30-PQ-擔憂疫情隨中國旅客長驅直入-多國加強邊境管制措施.html
@@ -16,7 +16,7 @@ author: 陳怡菱
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/e39fc33d-20220316kaiken06-1024x743.jpg" alt="" class="wp-image-95080" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/e39fc33d-20220316kaiken06-1024x743.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/e39fc33d-20220316kaiken06-300x218.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/e39fc33d-20220316kaiken06-768x557.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/e39fc33d-20220316kaiken06.jpg 1300w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>日本首相岸田文雄（圖／首相官邸）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/e39fc33d-20220316kaiken06-1024x743.jpg" alt="" class="wp-image-95080" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/e39fc33d-20220316kaiken06-1024x743.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/e39fc33d-20220316kaiken06-300x218.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/e39fc33d-20220316kaiken06-768x557.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/e39fc33d-20220316kaiken06.jpg 1300w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>日本首相岸田文雄（圖／首相官邸）</figcaption></figure></div>
 
 
 
