Update VOCUS 2023-01-01 patch

--- a/_posts/2022-12-30-VOCUS-2022-farewell.......html
+++ b/_posts/2022-12-30-VOCUS-2022-farewell.......html
@@ -34,29 +34,22 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">西村京太郎（1930年9月6日－2022年3月3日）</span></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/cda5aba6-b03a-42d4-92a6-7e2ed3f51d70.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://www.sankei.com/article/20220306-TIJCB76N4VLJHN4DRW4PFJVBM4/</figcaption></div></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">文夏（Bûn-hā，1928年5月20日－2022年4月6日）</span></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/-7UUc-dx2z8"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/-7UUc-dx2z8"></iframe></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">彭明敏（Phêⁿ Bêng-bín，1923年8月15日－2022年4月8日）</span></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/f15dcd98-a574-4d9e-a772-d79c0eb94695.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://cn.nytimes.com/obits/20220418/peng-ming-min-dead/zh-hant/</figcaption></div></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">曾江（Kenneth Tsang Kong，1934年10月5日－2022年4月27日）</span></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/2c5f416a-b0ad-4666-a44e-f4258c3c87d3.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://www.nme.com/news/film/kenneth-tsang-hong-kong-film-veteran-who-acted-in-rush-hour-2-and-die-another-day-has-died-3214164</figcaption></div></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">范吉利斯（Vangelis，1943年3月29日－2022年5月17日）</span></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/ea62de34-bc2f-46b2-ad64-c3f54ef7c64b.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://www.nytimes.com/2022/05/20/arts/music/vangelis-composer-best-known-for-chariots-of-fire-dies-at-79.html</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/8a-HfNE3EIo"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/8a-HfNE3EIo"></iframe></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">黃文擇（1956年7月1日－2022年6月12日）</span></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/0f18e94a-4462-4962-a1d7-d8cd19e9f05d.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://www.cna.com.tw/news/acul/202206130002.aspx</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/2JlEMpy5ljY"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/2JlEMpy5ljY"></iframe></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">楊秀卿（1935年1月1日－2022年6月17日）</span></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/abc1b4f5-5921-41a0-9f06-4d50d140560d.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://www.businesstoday.com.tw/article/category/154769/post/201802120065/</figcaption></div></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">倪匡（1935年5月30日－2022年7月3日）</span></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/38b5c944-cc96-410c-83f2-a914f8ee4c84.webp"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://www.gq.com.tw/entertainment/article/%E5%80%AA%E5%8C%A1-%E9%9B%A2%E4%B8%96-%E8%A1%9B%E6%96%AF%E7%90%86</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
 <div><h3><a href="https://vocus.cc/article/629486fffd89780001b29303">我是誰？｜方格子 vocus</a></h3><span>朋友笑我終日白夢，愛管閒事，此言真是差矣；一杯水、一本書、一張椅子，當我們留意的時候，眼底所建，這是一杯水、一本書、一張椅子。可萬一我們沒有把目光放在這些事物上頭時，水還是水嗎？書還是書嗎？椅子，難道依舊是椅子嗎？虛虛幻幻，諺語說「相由心生」，假若此刻「無心」，是否當下須臾即名「無相」？ 「菩提本無樹，明鏡亦非台，本來無一物，何處惹塵埃？」 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252F295c902d-5191-46ef-b08d-c1c8155f5cf0.jpg%26width%3D1200%26sign%3DfavVQlMraEraPGx_Jx372dUi-ms2WKK0YNE-A01ZK-c&amp;width=550&amp;sign=uaNwDauqvJ0-rLvPkPXkxS1igWG5KCufBP8qH9BDK4I"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">高橋和希（Takahashi Kazuki，1961年10月4日－2022年7月4日）</span></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/dc03e6c8-307b-4b19-89e4-2b1d98f7f6d9.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://www.ingame.de/news/kazuki-takahashi-kuestenwache-okinawa-japan-tot-yu-gi-oh-soldat-rettung-91653238.html</figcaption></div></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">安倍晉三（Abe Shinzō，1954年9月21日－2022年7月8日）</span></div>
@@ -80,10 +73,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">薇薇安·魏斯伍德女爵士（Vivienne Westwood，1941年4月8日－2022年12月29日）</span></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/19feeec3-e1a3-43bc-859a-db216fd3369a.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://people.com/style/fashion-designer-vivienne-westwood-dead-at-81/</figcaption></div></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">比利（Pelé，1940年10月23日－2022年12月29日）</span></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/vj8lAjaJmHo"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/vj8lAjaJmHo"></iframe></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/8831ea29-6f09-444a-924d-3df7e39446c6.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://www.deccanherald.com/sports/football/pele-eternal-king-of-the-beautiful-game-1176379.html</figcaption></div></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/dhFjwz3zF5Y"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/dhFjwz3zF5Y"></iframe></div>
