--- a/_posts/2022-12-30-VOCUS-第五十八則大哉問-透過鏡頭可以自我對話-神人之家觀後感.html
+++ b/_posts/2022-12-30-VOCUS-第五十八則大哉問-透過鏡頭可以自我對話-神人之家觀後感.html
@@ -8,9 +8,8 @@ tags: blog
 author: 陳政佑
 ---
 
-<div class="draft-block draft--p left">　　</div>
 <div class="draft-block draft--p left">　　《神人之家》剛上映的時候，我滿心期待地到光點華山想看導演QA場，結果竟然快速完售，只有遠遠得看到導演本人，後來因為入伍當兵，沒機會看，好險過了兩週還有場次！這是購入光點年度套票後收看的第四部電影，也是我第一次進電影院看紀錄片，平常甚至很少看這個類型的作品，覺得比較不對胃口，但看完《神人之家》的第一個想法竟然是：「好想去QA場！」</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/GgcXguLpRh8"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/GgcXguLpRh8"></iframe></div>
 <h3 class="draft-block draft--h3" name="header-d0qhc">透過鏡頭可以自我對話？</h3>
 <div class="draft-block draft--p left">為什麼我要問這個問題？</div>
 <h3 class="draft-block draft--h3" name="header-94gn8">鏡頭做為媒介，說出內心的糾結</h3>
@@ -29,7 +28,6 @@ author: 陳政佑
 <div class="draft-block draft--p left">　　最後，導演帶著從未看過海的母親來到海邊，故事在這裡結尾，非常突然，但也合理，<span style="font-weight: bold; ">他應該不會再逃避回家了</span>，也說本來不愛打電話回家的自己，現在太久沒聽到母親的聲音，甚至會想主動打電話回家。《那年，我們的夏天》結尾時，導演男二開始錄製關於自己的紀錄片，長期以來他跟母親的關係很差，直到母親生重病，要求一起拍攝，才開始要正視這段破碎的關係，相信藉由拍攝，他也會找到屬於自己的答案。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/b355b112-bcb4-4b92-bac7-77687bdcca74.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">《神人之家》劇照 / 電影神搜資料庫</figcaption></div></div>
 <div class="draft-block draft--p left">　　《神人之家》是一部非常好看的紀錄片，內含大量的情感，卻一點也不煽情，剪輯節奏流暢，跟著故事發展，與導演一起思考、成長，而導演能透過鏡頭與自我對話，說出心事，<span style="font-weight: bold; ">我們沒有這個媒介，又該怎麼做呢</span>？</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">追蹤我的粉專→</span><a href="https://www.facebook.com/brainhavemouth" target="_blank" class="draft--a">https://www.facebook.com/brainhavemouth</a><br><span style="font-weight: bold; ">追蹤我的哀居粉專→</span><a href="https://www.instagram.com/brainhasmouth/" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://www.instagram.com/brainhasmouth/</span></a></div>
 <h2 class="draft-block draft--h2" name="header-fd8sa">喜歡我的文章按讚追蹤加分享！或是斗內抖起來！</h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">也能在留言處提出你的看法喔！</span></div>
