--- a/_posts/2023-01-01-INMEDIA-入行十年演員創劇團-首演-暫時沒有名字-談香港創作人.html
+++ b/_posts/2023-01-01-INMEDIA-入行十年演員創劇團-首演-暫時沒有名字-談香港創作人.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_434.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>在李煥林、劉曉樺、吳銳民投身劇場的第十年，文藝表演界因為疫情，進入史無前例的寒冬期。偏偏這三位演員決定成立「三座一台創作社」，首個作品《暫時沒有名字》，正正圍繞香港的創作人，如何在租金、資源、創作空間等制肘下，闖出一片天地；將於1月13-15日在香港藝術中心壽臣劇院上演。</p>
+<img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_434.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>在李煥林、劉曉樺、吳銳民投身劇場的第十年，文藝表演界因為疫情，進入史無前例的寒冬期。偏偏這三位演員決定成立「三座一台創作社」，首個作品《暫時沒有名字》，正正圍繞香港的創作人，如何在租金、資源、創作空間等制肘下，闖出一片天地；《暫》將於1月13-15日在香港藝術中心壽臣劇院上演。</p>
 <p>夢想與麵包，從來都不是容易的抉擇；但這幾位演員在三十幾歲的年紀，仍決心創立劇團，為的是好好訴說香港的故事：「我們做很多翻譯劇、經典劇或百老匯音樂劇，但為甚麼做別人的戲才是好？在香港，當然做香港的戲。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1501351P7Z" title="無標題"><img src="https://live.staticflickr.com/65535/52599325401_cef86be641_z.jpg" alt="無標題" /></a><br /><em>《暫時沒有名字》綵排照</em></p>
 <p><strong>疫下冇工開  成立劇團主宰自己命運</strong></p>
