Update VOCUS 2023-01-02 patch

--- a/_posts/2022-12-31-VOCUS-圖地-101煙火越來越長嗎.html
+++ b/_posts/2022-12-31-VOCUS-圖地-101煙火越來越長嗎.html
@@ -13,9 +13,7 @@ author: 圖地
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/fd7613ae-fa12-4475-8502-4b8daa7b65d5.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">我在回顧歷年的煙火演出時，有2個特別的發現。</div>
 <div class="draft-block draft--p left">第一，煙火長度會被灌水。2018年的煙火號稱有360秒，實際上只有280秒而已。2022跨年煙火，官方也宣稱是「360秒超長煙火秀」，可是看YouTube影片實拍就可以發現只有305秒左右。你看底下這支影片，標題是「連放360秒」，影片長度卻不到6分鐘。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/uRz_U-pYBhw"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/uRz_U-pYBhw"></iframe></div>
 <div class="draft-block draft--p left">第二，從跨年倒數舞台看見時代轉變。2012年的跨年夜，宏達電高額贊助台北跨年晚會，舞台旁邊架設一片HTC手機造型的超大螢幕，王雪紅和馬英九一起站在舞台上倒數。如今，曾經在各自領域稱王的霸主都已失去當年英勇。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/G39FP_jy8XE"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/G39FP_jy8XE"></iframe></div>
 <div class="draft-block draft--p left">無論如何，祝福大家2023新年快樂！</div>
